# Generated by Django 6.1 on 2026-09-18 03:57

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('users', '0001_initial'),
    ]

    operations = [
        migrations.AlterField(
            model_name='user',
            name='role',
            field=models.CharField(choices=[('ADMIN', 'Admin'), ('RESIDENT', 'Resident'), ('WATCHMAN', 'Watchman'), ('INCHARGE', 'Incharge')], default='RESIDENT', max_length=20),
        ),
        migrations.CreateModel(
            name='Incharge',
            fields=[
                ('incharge_id', models.AutoField(primary_key=True, serialize=False)),
                ('designation', models.CharField(max_length=100)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='incharge_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Resident',
            fields=[
                ('resident_id', models.AutoField(primary_key=True, serialize=False)),
                ('apartment_number', models.CharField(max_length=50)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='resident_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Watchman',
            fields=[
                ('guard_id', models.AutoField(primary_key=True, serialize=False)),
                ('badge_number', models.CharField(max_length=50, unique=True)),
                ('shift', models.CharField(max_length=50)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='watchman_profile', to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
